--- a/style.css
+++ b/style.css
@@ -1,25 +1,75 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: bisque;
+.container {
+  width: 100%;
+  height: 775px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: bisque;
 }
-.row{
-    width: 80%;
-    height: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background-color: rgb(135, 114, 88);
+.row {
+  width: 85%;
+  height: 680px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: rgba(135, 114, 88, 0.18);
 }
 
+.card {
+  width: 20%;
+  height: 550px;
+  border-radius: 13px;
+  background-color: rgb(252, 254, 254);
+  display: flex;
+  /* justify-content: center; */
+  padding: 2%;
+  gap: 50px;
+  align-items: center;
+  flex-direction: column;
+}
+.image {
+  border-radius: 13px;
+  width: 100%;
+  height: 220px;
+  background-image: url("https://i.pinimg.com/originals/62/f1/da/62f1da32967de421a054c9fe5b98b0cf.gif");
+  background-size: cover;
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.description > header > h2 {
+  font-size: 32px;
+  margin: 0;
+  margin-bottom: 8px;
+}
+
+.linked {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+}
+.linked > a {
+  width: 100%;
+  border-radius: 10px;
+  height: 50px;
+  text-align: center;
+  background-color: rgb(246 72 59);
+  line-height: 3;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
