--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&family=Noto+Sans+Hebrew:wght@100..900&family=Staatliches&display=swap');
+
+* {
+    font-family: "Noto Sans Hebrew", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings: 100;
+}
 body {
   display: flex;
   justify-content: center;
