--- a/Interactive comments/style.css
+++ b/Interactive comments/style.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Lalezar&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Lalezar&display=swap");
 * {
   font-family: "Lalezar", system-ui;
   font-weight: 400;
