--- a/Interactive comments/style.css
+++ b/Interactive comments/style.css
@@ -13,7 +13,7 @@ body {
 
 .container {
   width: 88%;
-  height: 778px;
+  height: 450px;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
@@ -61,4 +61,33 @@ form > input {
   border-radius: 8px;
   background-color: rgb(51, 153, 255);
   color: white;
+}
+.idea {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+ul {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+li {
+  line-height: 3;
+  text-align: center;
+  list-style: none;
+  width: 50%;
+  height: 50px;
+  border-radius: 13px;
+  border: 3px solid rgb(51, 153, 255);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center
 }
