--- a/Interactive comments/style.css
+++ b/Interactive comments/style.css
@@ -62,13 +62,23 @@ form > input {
   background-color: rgb(51, 153, 255);
   color: white;
 }
+form > input:hover {
+  background-color: white;
+  border: 2px solid rgb(51, 153, 255);
+  color: rgb(51, 153, 255);
+  transform: scale(1.1);
+  transition-duration: 1s;
+}
+::placeholder{
+  color: rgb(202, 201, 201);
+  font-size: 18px;
+}
 .idea {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 ul {
   width: 50%;
@@ -76,7 +86,6 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 li {
   line-height: 3;
@@ -89,8 +98,8 @@ li {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center
+  align-items: center;
 }
-span{
+span {
   cursor: pointer;
 }
