--- a/Interactive comments/style.css
+++ b/Interactive comments/style.css
@@ -103,3 +103,11 @@ li {
 span {
   cursor: pointer;
 }
+.container > header > h1{
+  font-size: 45px;
+  color: rgb(2, 6, 61);
+}
+.container > header >p{
+  font-size: 15px;
+  color: rgb(1, 3, 32);
+}
