--- a/Interactive pricing component/style.css
+++ b/Interactive pricing component/style.css
@@ -3,23 +3,71 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: #8ec5fc;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
 }
 .container {
+  margin: 2% 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 40%;
+  height: 652px;
+  background-color: rgba(255, 228, 196, 0.185);
+  border-radius: 13px;
+  border: 2px solid rgb(90, 38, 180);
+}
+.rightSide {
+  width: 100%;
+  height: 410px;
+  background-color: rgba(243, 240, 235, 0);
+}
+.leftSide {
+  width: 100%;
+  height: 240px;
+  background-color: rgba(240, 231, 220, 0.169);
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  width: 78%;
-  height: 760px;
-  background-color: bisque;
+  padding: 1%;
 }
-.rightSide {
+.childeLeft,
+.childeRight {
   width: 50%;
-  height: 580px;
-  background-color: rgb(90, 74, 55);
+  height: 240px;
+  padding: 2%;
+  /* background-color: aquamarine; */
 }
-.leftSide {
-  width: 50%;
-  height: 580px;
-  background-color: rgb(165, 97, 14);
+.childeLeft{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+}
+.checked {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row;
+  width: 93%;
+  gap: 10px;
+}
+
+.childeRight{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+}
+
+.childeRight > button{
+    width: 90%;
+    height: 48px;
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    background-color: rgb(46, 0, 75);
+    color: white;
 }
