--- a/Interactive pricing component/style.css
+++ b/Interactive pricing component/style.css
@@ -14,7 +14,7 @@ body {
   flex-direction: column;
   width: 40%;
   height: 652px;
-  background-color: rgba(255, 228, 196, 0.185);
+  background-color: rgb(243, 234, 249);
   border-radius: 13px;
   border: 2px solid rgb(90, 38, 180);
 }
@@ -25,13 +25,13 @@ body {
   flex-direction: column;
   width: 100%;
   height: 410px;
-  background-color: rgba(243, 240, 235, 0);
+  /* background-color: rgba(243, 240, 235, 0); */
   padding: 1%;
 }
 .leftSide {
   width: 100%;
   height: 240px;
-  background-color: rgba(240, 231, 220, 0.169);
+  /* background-color: rgba(240, 231, 220, 0.169); */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -75,4 +75,131 @@ body {
   outline: none;
   background-color: rgb(46, 0, 75);
   color: white;
+}
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  padding: 2%;
+  height: 33.3%;
+}
+.leftText,
+.rightText {
+  width: 50%;
+  text-align: center;
+}
+.mainContent {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 33.3%;
+}
+.mainContent > input {
+  width: 85%;
+  height: 30px;
+}
+.btnTag {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  height: 33.3%;
+  gap: 20px;
+}
+.btnLeft,
+.btnRight {
+  width: 40%;
+  text-align: center;
+}
+.btnLeft {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  flex-direction: row;
+  gap: 20px;
+}
+.btnRight {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row;
+  gap: 20px;
+}
+/* style toggle btn */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #caa9ff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 1px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #5016b5;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #5016b5;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+  height: 29px;
+  width: 59px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* btns tag style */
+.btnRight > a{
+  text-decoration: none;
+  background-color: rgb(243, 177, 157);
+  color: #f4672a;
+  height: 25px;
+  width:48%;
+  border-radius: 50px;
+  line-height: 1.5;
 }
