--- a/Interactive pricing component/style.css
+++ b/Interactive pricing component/style.css
@@ -203,3 +203,9 @@ input:checked + .slider:before {
   border-radius: 50px;
   line-height: 1.5;
 }
+
+
+#text > span{
+  font-size: 21px;
+  color: #a5a1a1;
+}
