--- a/style.css
+++ b/style.css
@@ -62,6 +62,14 @@ body {
   background-image: url("https://i.gifer.com/origin/f9/f9889257dd191dc36b7d28d4578beeef_w200.gif");
   background-size: cover;
 }
+/* card3 */
+.image2 {
+  border-radius: 13px;
+  width: 100%;
+  height: 220px;
+  background-image: url("https://cdn.dribbble.com/users/174627/screenshots/5411267/dribbble_slider.gif");
+  background-size: cover;
+}
 .image:hover {
     transform: scale(1.1);
     transition-duration: 1s;
