--- a/Job listings with filtering/style.css
+++ b/Job listings with filtering/style.css
@@ -5,6 +5,7 @@ body {
   flex-direction: column;
   margin: 0;
 }
+
 .container {
   width: 100%;
   height: 120vh;
@@ -14,6 +15,7 @@ body {
   flex-direction: column;
   background-color: bisque;
 }
+
 .upheader {
   width: 100%;
   height: 100px;
@@ -26,6 +28,7 @@ body {
   align-items: center;
   flex-direction: column;
 }
+
 .mainContent {
   width: 100%;
   height: 110vh;
@@ -36,6 +39,7 @@ body {
   gap: 1px;
   background-color: rgb(24, 24, 24);
 }
+
 .columns {
   width: 100%;
   height: 90vh;
@@ -45,7 +49,8 @@ body {
   flex-direction: column;
   gap: 10px;
 }
-.columns > div {
+
+.columns>div {
   width: 38%;
   height: 80px;
   background-color: #393a3b;
@@ -57,6 +62,7 @@ body {
   flex-direction: row;
   gap: 10px;
 }
+
 .search {
   width: 70%;
   height: 40px;
@@ -67,7 +73,8 @@ body {
   flex-direction: row;
   padding: 1%;
 }
-.search > input {
+
+.search>input {
   width: max-content;
   height: 25px;
   background-color: #242524;
@@ -77,17 +84,19 @@ body {
   border-radius: 15px;
   color: white;
 }
-.columns > div > .image {
+
+.columns>div>.image {
   border-radius: 50px;
   width: 60px;
   height: 60px;
 }
 
-.columns > div > .image > img {
+.columns>div>.image>img {
   width: 65px;
   height: 60px;
   border-radius: 50px;
 }
+
 .information {
   width: 90%;
   display: flex;
@@ -96,22 +105,25 @@ body {
   flex-direction: row;
   height: 60px;
 }
+
 .leftInfo,
 .rightInfo {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: aqua;
   width: 50%;
   height: 60px;
 }
+
+
 .leftInfo {
   align-items: baseline;
   gap: 2px;
   background-color: unset;
   padding: 1%;
 }
+
 .title {
   display: flex;
   justify-content: left;
@@ -119,6 +131,7 @@ body {
   flex-direction: row;
   gap: 20px;
 }
+
 .date {
   display: flex;
   justify-content: left;
@@ -126,16 +139,19 @@ body {
   flex-direction: row;
   gap: 20px;
 }
+
 h4,
 h2,
 p {
   margin: 0;
 }
-.title > h4 {
+
+.title>h4 {
   font-size: 13px;
   color: rgb(48, 222, 253);
 }
-.title > a {
+
+.title>a {
   font-size: 14px;
   font-weight: bold;
   text-decoration: none;
@@ -145,17 +161,19 @@ p {
   text-align: center;
   color: white;
 }
-.name > h2 {
+
+.name>h2 {
   font-size: 15px;
   color: white;
 }
-.date > p {
+
+.date>p {
   font-size: 14px;
   font-weight: bold;
   color: white;
 }
 
-#box > li {
+#box>li {
   list-style: none;
   color: white;
   background-color: aquamarine;
@@ -170,10 +188,28 @@ p {
   align-items: center;
   flex-direction: row;
 }
-#box > li > span {
+
+#box>li>span {
   cursor: pointer;
 }
 
-.hide{
+.hide {
   display: none !important;
+}
+
+.rightInfo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.rightInfo>option {
+  font-size: 15px;
+  background-color: antiquewhite;
+  width: max-content;
+  border-radius: 30px;
+  text-align: center;
 }
