[debug]-found tags
Description:
found tags with search input

--- a/Job listings with filtering/style.css
+++ b/Job listings with filtering/style.css
@@ -208,8 +208,17 @@ p {
 
 .rightInfo>option {
   font-size: 15px;
-  background-color: antiquewhite;
+  background-color: rgba(168, 204, 255, 0.845);
   width: max-content;
   border-radius: 30px;
   text-align: center;
+  color: white;
+}
+
+
+
+
+
+.found{
+  border: 2px solid red;
 }
