--- a/Job listings with filtering/style.css
+++ b/Job listings with filtering/style.css
@@ -213,6 +213,11 @@ p {
   border-radius: 30px;
   text-align: center;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 
